# FHIR-Analytics-Pipelines

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  GeoPol.xml  README.md  SUPPORT.md  azure-pipelines-test.yml  azure-pipelines.yml  build-native-nugets.yml  ci-pr.yml  nuget.config  propertiesGroupConfig.yml  publish.yml  release.yml  security_scan.yml  stylecop.json
Cdm/: Microsoft.Health.Fhir.Transformation.sln
Cdm/Configuration-Generator/: configuration_generator.js  generate-config.bat
Cdm/Microsoft.Health.Fhir.Transformation.BatchExecutor/: Program.cs
Cdm/Microsoft.Health.Fhir.Transformation.Cdm/: CdmSchemaGenerator.cs
Cdm/Microsoft.Health.Fhir.Transformation.Cdm.Test/: TestSettings.cs
Cdm/Microsoft.Health.Fhir.Transformation.Cdm.Tool/: Program.cs
Cdm/Microsoft.Health.Fhir.Transformation.Core/: ISink.cs
Cdm/Microsoft.Health.Fhir.Transformation.Core.Test/: TransformationExecutorTest.cs
Cdm/Templates/: cdmToSynapse.json
Configuration-Generator/: configuration_generator.js  configuration_viewer.js  constants.js  generate-config-from-ymal.js  generate_from_yaml.js  generate_from_ymal.js  generator-utils.js  generator_utils.js  package-lock.json  package.json  program.js  propertiesGroupConfig.yml  resourcesConfig.yml
Configuration-Generator/test/: configurationViewer.test.js  configurationsContent.test.js  generatorUtils.test.js  propertiesGroupTypes.test.js  publishConfigurations.test.js  removeUnrollpathPropertyInResource.test.js  yamlGenerator.tests.js
FhirToCdm/: SUPPORT.md  build.yml  ci-pr.yml  publish.yml
FhirToCdm/Configuration-Generator/: configuration_viewer.js  generate_from_yaml.js  package-lock.json  package.json  propertiesGroupConfig.yml
FhirToCdm/Microsoft.CommonDataModel.ObjectModel/: Microsoft.CommonDataModel.ObjectModel.csproj
FhirToCdm/Microsoft.CommonDataModel.ObjectModel.Adapter.Adls/: Microsoft.CommonDataModel.ObjectModel.Adapter.Adls.csproj
FhirToCdm/Microsoft.Health.Fhir.Transformation.BatchExecutor/: AdlsCsvSink.cs  FhirBlobDataStream.cs  Microsoft.Health.Fhir.Transformation.Cdm.BatchExecutor.csproj  RunAdfCustomActivity.ps1  StorageBlobNdjsonSource.cs  StorageDefinitionLoader.cs
FhirToCdm/Microsoft.Health.Fhir.Transformation.Cdm/: CdmDataTypeHelper.cs  CdmSchemaGenerator.cs
FhirToCdm/Microsoft.Health.Fhir.Transformation.Cdm.Test/: CdmTest.cs  Microsoft.Health.Fhir.Transformation.Cdm.Test.csproj
FhirToCdm/Microsoft.Health.Fhir.Transformation.Cdm.Tool/: Microsoft.Health.Fhir.Transformation.Cdm.Tool.csproj
FhirToCdm/Microsoft.Health.Fhir.Transformation.Core/: BasicFhirElementTabularTransformer.cs  CsvUtils.cs  FhirElementTabularTransformer.cs  LocalNdjsonSource.cs  Microsoft.Health.Fhir.Transformation.Core.csproj  TransformationExecutor.cs  TransformationLogging.cs
FhirToCdm/Microsoft.Health.Fhir.Transformation.Core.Test/: BasicFhirElementTabularTransformerTests.cs  BasicFhirElementTabularTransformerTestsOnDataTypes.cs  CsvUtilsTests.cs  MappingDefinitionLoaderTests.cs  Microsoft.Health.Fhir.Transformation.Core.Test.csproj
FhirToCdm/Templates/: fhirDataToSynpase.json  fhirServiceToCdm.json
FhirToCdm/docs/: cdm-to-synapse.md  fhir-to-cdm.md  yaml-instructions-format.md
FhirToDataLake/: .dockerignore  .editorconfig  Directory.Build.props  Directory.Packages.props  Microsoft.Health.AnalyticsConnector.Synapse.sln  Microsoft.Health.Fhir.Synapse.sln  NuGet.Config  Synapse-E2E-Test.yml  Synapse-search.yml  UpgradeLog.htm  UpgradeLog2.htm  azure-pipelines.yml  build-linux-native-libs.yml  build-native-nugets.yml  build-windows-native-libs.yml  build.yml  global.json  pack-nugets.yml  synapse-e2e-test.yml  ynapse-2-est.yml
FhirToDataLake/SynapseValidate/: SynapseValidator.py  Synapse_Validator.py
FhirToDataLake/azurepipelines/: build-linux-native-libs.yml  build-windows-native-libs.yml  ci-test.yml  ci.yml  nativeci.yml  pack-nugets.yml  synapse-e2e-test.yml
FhirToDataLake/docs/: Crontab-Expressions-for-Pipeline-Scheduler.md  Crontab-expressions-for-pipeline-scheduler.md  CustomizedSchemaDoc.md  DICOM-Data-Mapping.md  Data-Mapping.md  Deploy-DicomToDatalake.md  Deploy-FhirToDatalake-Function.md  Deploy-FhirToDatalake.md  (+13 more)
FhirToDataLake/src/Microsoft.Health.Fhir.Synapse.Parquet.Native/: ArrowParquetOption.h  CMakeLists.txt  Microsoft.Health.Fhir.Synapse.Parquet.Native.vcxproj  Microsoft.Health.Fhir.Synapse.Parquet.Native.vcxproj.filters  ParquetConverter.cpp  ParquetConverter.h  Readme.md  Status.cpp  Status.h  vcpkg.json
FhirToDataLake/src/Microsoft.Health.Fhir.Synapse.Parquet.Native/src/: CMakeLists.txt  ParquetLib.cpp  ParquetLib.h  ParquetOptions.h  ParquetWriter.cpp  ParquetWriter.h  SchemaManager.cpp  SchemaManager.h
FhirToDataLake/src/Microsoft.Health.Fhir.Synapse.Parquet.Native/test/: CMakeLists.txt  ParquetLibTests.cpp  ParquetWriterTests.cpp  SchemaManagerTests.cpp
Microsoft.Health.Fhir.Transformation.BatchExecutor/: AdlsCsvSink.cs  FhirAzureConstants.cs  FhirBlobDataStream.cs  Program.cs
Microsoft.Health.Fhir.Transformation.Cdm/: CdmSchemaGenerator.cs  Microsoft.Health.Fhir.Transformation.Cdm.csproj
Microsoft.Health.Fhir.Transformation.Cdm.Test/: AdlsCsvSinkTest.cs  Microsoft.Health.Fhir.Transformation.Cdm.Test.csproj  StorageBlobNdjsonSourceTest.cs  StorageDefinitionLoaderTest.cs  TestUtils.cs  test-settings.json
Microsoft.Health.Fhir.Transformation.Cdm.Tool/: Program.cs
Microsoft.Health.Fhir.Transformation.Core/: BasicFhirElementTabularTransformer.cs  Constants.cs  FhirElementTabularTransformer.cs  ISink.cs  ISource.cs  LocalCsvSink.cs  OperationExecutionHelper.cs
Microsoft.Health.Fhir.Transformation.Core.Test/: BasicFhirElementTabularTransformerTests.cs  MappingDefinitionLoaderTests.cs  OperationExecutionHelperTests.cs  TabularMappingDefinitionTests.cs
Scripts/: DeployCdmToSynapsePipeline.ps1  config.json  configLoop.json  configMaster.json
Templates/: cdmToSynapse.json  cdmToSynapseLoop.json  cdmToSynapseMaster.json  fhirDataToSynpase.json  fhirServiceToCdm.json
docs/: Deployment.md  cdm-to-synapse.md  fhir-to-cdm.md
scripts/: Set-SynapseEnvironment.ps1  Usage.docx
(+2373 files in other folders)
